--- a/src/index.html
+++ b/src/index.html
@@ -410,8 +410,12 @@
         <div class="form-card">
           <form id="auth-form">
             <div class="form-group">
-              <label class="form-label" for="auth-email">Email</label>
-              <input type="email" id="auth-email" class="form-input" placeholder="your@email.com" required>
+              <label class="form-label" for="auth-email" id="auth-identifier-label">Email</label>
+              <input type="text" id="auth-email" class="form-input" placeholder="your@email.com" required>
+            </div>
+            <div class="form-group auth-username-group" id="auth-username-group">
+              <label class="form-label" for="auth-username">Username</label>
+              <input type="text" id="auth-username" class="form-input" placeholder="e.g. blossom_01">
             </div>
             <div class="form-group">
               <label class="form-label" for="auth-password">Password</label>
@@ -421,8 +425,8 @@
               </div>
             </div>
             <div class="form-group auth-name-group" id="auth-name-group">
-              <label class="form-label" for="auth-name">Full Name</label>
-              <input type="text" id="auth-name" class="form-input" placeholder="Your name">
+              <label class="form-label" for="auth-name">Display Name (Optional)</label>
+              <input type="text" id="auth-name" class="form-input" placeholder="How your name appears">
             </div>
             <div class="form-actions auth-form-actions">
               <button type="submit" class="btn btn-primary auth-submit-btn" id="auth-submit-btn">
